--- a/sp404mk2tutorial/index.html
+++ b/sp404mk2tutorial/index.html
@@ -27,11 +27,8 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     
-    <!-- Preconnect for performance -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    
     <!-- Structured Data for SEO -->
-    <script type="application/ld+json">
+    <script type="application/ld+json" id="structured-data">
     {
       "@context": "https://schema.org",
       "@type": "TechArticle",
@@ -46,7 +43,7 @@
         "name": "leekylee-works"
       },
       "datePublished": "2024-01-01",
-      "dateModified": "2024-01-01",
+      "dateModified": "2024-12-12",
       "inLanguage": "zh-TW",
       "keywords": "SP-404MKII, Roland, 取樣機, Sampler, 音樂製作, Beat Making",
       "about": {
@@ -63,6 +60,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/App.tsx"></script>
+    <script type="module" src="/main.tsx"></script>
   </body>
 </html>
