--- a/sp404mk2tutorial/index.html
+++ b/sp404mk2tutorial/index.html
@@ -4,6 +4,10 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+          <!-- Google Fonts - Noto Sans TC (繁體中文) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
       <title>Coding Interaction Guide (PB Version)</title>
     </head>
 
